--- a/terms.html
+++ b/terms.html
@@ -6,7 +6,6 @@
 <title>Talk 2Me Nice</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 <style>
-/* ------------------ THEME & COLORS ------------------ */
 :root {
   --bg-main: linear-gradient(160deg, #1b1f27 0%, #2a2f3b 100%);
   --bg-card: #2c313d;
@@ -15,99 +14,222 @@
   --text-muted: #a1a6b0;
 }
 
-/* ------------------ LAYOUT & TYPOGRAPHY ------------------ */
-body { margin:0; font-family:'Montserrat',system-ui,sans-serif; background: var(--bg-main); color: var(--text-main); display:flex; flex-direction:column; min-height:100vh; }
-h3,h4 { font-family:'Playfair Display', serif; }
-button, input, select { font-family:'Montserrat', sans-serif; }
+/* Global */
+body {margin:0; font-family:'Montserrat',system-ui,sans-serif; background: var(--bg-main); color: var(--text-main);}
+h3,h4 {font-family:'Playfair Display', serif;}
+button {font-family:'Montserrat', sans-serif; cursor:pointer;}
+.hidden {display:none;}
 
-/* ------------------ LANDING PAGE (PHASE 1) ------------------ */
-#landingPage, #chatContainer { max-width:900px; margin:2rem auto; display:flex; flex-direction:column; gap:1rem; }
-#landingPage input { padding:0.6rem; border-radius:12px; border:none; background:#1f232d; color:var(--text-main); margin-bottom:1rem; width:100%; }
-#landingPage button { padding:0.6rem 1rem; border-radius:999px; border:none; background: var(--accent); cursor:pointer; transition: all 0.3s ease; width:100%; }
-#landingPage button:hover { transform: scale(1.05); background:#ff9f40; }
+/* Landing Page */
+#landingPage {max-width:500px; margin:2rem auto; display:flex; flex-direction:column; gap:1rem;}
+#landingPage input {padding:0.6rem; border-radius:12px; border:none; background:#1f232d; color:var(--text-main);}
+.companionGrid {display:grid; grid-template-columns:repeat(2,1fr); gap:1rem;}
+.companionCard {background: var(--bg-card); border-radius:14px; padding:1rem; text-align:center; border:2px solid transparent; transition: all 0.25s ease;}
+.companionCard.active {border-color: var(--accent); box-shadow:0 0 0 2px rgba(255,184,108,0.25);}
+.companionCard:hover {transform:translateY(-4px); box-shadow:0 6px 16px rgba(0,0,0,0.35);}
+#landingPage button {padding:0.6rem 1rem; border-radius:999px; border:none; background: var(--accent); transition:all 0.3s ease;}
+#landingPage button:hover {background:#ff9f40; transform:scale(1.05);}
 
-/* ------------------ COMPANION SELECTION (PHASE 1 & 3) ------------------ */
-#companionSelector h3 { text-align:center; color:var(--accent); margin-bottom:1rem; }
-.companionGrid { display:grid; grid-template-columns:repeat(auto-fit, minmax(140px,1fr)); gap:1rem; }
-.companionCard { background: var(--bg-card); border-radius: 14px; padding: 1rem; cursor:pointer; text-align:center; transition: all 0.25s ease; border: 2px solid transparent; }
-.companionCard h4 { margin:0; }
-.companionCard p { font-size:0.85rem; color:var(--text-muted); margin-top:0.4rem; }
-.companionCard small.preview { display:block; margin-top:0.5rem; font-size:0.75rem; color:var(--text-muted); font-style:italic; }
-.companionCard:hover { transform: translateY(-4px); box-shadow:0 8px 18px rgba(0,0,0,0.35);}
-.companionCard.active { border-color:var(--accent); box-shadow:0 0 0 2px rgba(255,184,108,0.25); }
+/* Chat Page */
+#chatContainer {max-width:900px; margin:2rem auto; display:flex; gap:1rem; flex-direction:row;}
+#profileSidebar {width:220px; padding:1rem; background: var(--bg-card); border-radius:16px; flex-shrink:0; display:flex; flex-direction:column; gap:1rem;}
+#chatArea {flex:1; display:flex; flex-direction:column; background: var(--bg-card); border-radius:16px; padding:1rem; box-shadow:0 6px 16px rgba(0,0,0,0.25);}
+#chat {flex:1; overflow-y:auto; padding-bottom:1rem;}
+.message {max-width:75%; padding:0.8rem 1.2rem; margin-bottom:0.7rem; border-radius:20px; line-height:1.5;}
+.user {background:var(--accent); color:#1b1f27; align-self:flex-end;}
+.bot {background:var(--bg-card); align-self:flex-start;}
+footer {display:flex; padding:0.8rem; gap:0.5rem; background:#1f232d; border-radius:12px; position:sticky; bottom:0; margin-top:1rem;}
+footer input {flex:1; padding:0.6rem; border-radius:12px; border:none; background:#2c313d; color:var(--text-main);}
+footer button {padding:0.6rem 1rem; border-radius:999px; border:none; background: var(--accent); transition: all 0.3s ease;}
+footer button:hover {background:#ff9f40; transform:scale(1.05);}
+#gearBtn {margin-left:0.5rem; font-size:1.2rem; background:none; color:var(--accent); border:none;}
 
-/* ------------------ CHAT PAGE (PHASE 1 & 2) ------------------ */
-#chatContainer { flex-direction:row; display:flex; gap:1rem; animation:fadeIn 0.8s ease-out; }
-#profileSidebar { width:220px; padding:1rem; background: var(--bg-card); border-radius:16px; flex-shrink:0; display:flex; flex-direction:column; gap:1rem; box-shadow:0 6px 16px rgba(0,0,0,0.3);}
-#starterBox { margin:1rem 0; padding:0.8rem; background:#1f232d; border-radius:12px; cursor:pointer; transition: transform 0.2s; }
-#starterBox:hover { transform:scale(1.03); }
-#starterTitle { font-weight:600; margin:0.5rem 0; color:#ffb86c; text-align:center; }
-#chatArea { flex:1; display:flex; flex-direction:column; background: var(--bg-card); border-radius:16px; padding:1rem; box-shadow:0 6px 16px rgba(0,0,0,0.25); }
+/* Starter Dropdown */
+#starterDropdown {width:100%; padding:0.5rem; border-radius:12px; background:#1f232d; color:var(--text-main); border:none; margin-bottom:1rem;}
 
-/* ------------------ MESSAGES (PHASE 1 & 2) ------------------ */
-.message { max-width:75%; padding:0.8rem 1.2rem; margin-bottom:0.7rem; border-radius:20px; line-height:1.5; opacity:0; animation:fadeInMessage 0.5s forwards; }
-.user { background:var(--accent); color:#1b1f27; align-self:flex-end; }
-.bot { background:var(--bg-card); align-self:flex-start; }
+/* Companion Center Stage */
+#currentCompanion {text-align:center; margin-bottom:1rem;}
+#currentCompanion h2 {font-size:2rem; color:var(--accent); margin:0;}
+#currentCompanion p {font-size:0.9rem; color:var(--text-muted); margin:0;}
 
-/* ------------------ FOOTER (PHASE 1 & 2) ------------------ */
-footer { display:flex; padding:0.8rem; gap:0.5rem; }
-footer input { flex:1; padding:0.6rem; border-radius:12px; border:none; background:#1f232d; color:var(--text-main); }
-footer button { padding:0.6rem 1rem; border-radius:999px; border:none; background: var(--accent); cursor:pointer; transition: all 0.3s ease; }
-footer button:hover { transform: scale(1.05); background:#ff9f40; }
-
-/* ------------------ VOICE BUTTONS (PHASE 2) ------------------ */
-#micBtn { border-radius:50%; width:42px; height:42px; font-size:1.2rem; background: var(--accent); border:none; cursor:pointer; }
-#micBtn.listening { animation:pulse 1.2s infinite; }
-#micBtn.disabled { opacity:0.4; cursor:not-allowed; }
-#voiceSettings { background: var(--bg-card); padding:1rem; border-radius:14px; margin-top:1rem; font-size:0.85rem;}
-#voiceSettings h4 { margin-top:0; color:var(--accent);}
-#voiceSettings label { display:flex; align-items:center; justify-content:space-between; margin-bottom:0.6rem; gap:0.5rem;}
-
-/* ------------------ ONBOARDING OVERLAY (PHASE 1) ------------------ */
-#onboarding {position:fixed; inset:0; background: rgba(0,0,0,0.65); display:flex; align-items:center; justify-content:center; z-index:999;}
-.onboardCard {background: var(--bg-card); padding:2rem; border-radius:18px; max-width:360px; text-align:center;}
-.onboardCard h3 {color:var(--accent);}
-.onboardCard button {margin-top:1rem; padding:0.6rem 1.4rem; border-radius:999px; border:none; background: var(--accent); cursor:pointer;}
-
-/* ------------------ ANIMATIONS ------------------ */
-@keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
-@keyframes fadeInMessage { from{opacity:0; transform:translateY(10px);} to{opacity:1; transform:translateY(0);} }
-@keyframes pulse {0%{box-shadow:0 0 0 0 rgba(255,184,108,0.6);} 70%{box-shadow:0 0 0 12px rgba(255,184,108,0);} 100%{box-shadow:0 0 0 0 rgba(255,184,108,0);}}
-.hidden { display:none; }
+/* Footer Links */
+#footerLinks {margin-top:0.5rem; display:flex; justify-content:space-between; font-size:0.8rem; color:var(--text-muted);}
+#footerLinks a {color:var(--text-muted); text-decoration:none;}
+#footerLinks a:hover {text-decoration:underline;}
 </style>
 </head>
 <body>
 
-<!-- ================= PHASE 1: LANDING PAGE ================= -->
+<!-- Landing Page -->
 <div id="landingPage">
-  <h2 style="text-align:center; color:var(--accent); font-family:'Playfair Display', serif;">Talk 2Me Nice</h2>
-  <input id="nicknameInput" placeholder="Enter your nickname" />
+  <h2 style="text-align:center; color:var(--accent);">Talk 2Me Nice</h2>
+  <input id="nicknameInput" placeholder="Enter your nickname">
   <div id="companionSelector">
-    <h3>Choose Your Companion</h3>
+    <h3>Select Your Companion</h3>
     <div class="companionGrid">
-      <div class="companionCard" data-companion="Whisp"><h4>Whisp</h4><p>Gentle, supportive, calm</p><small class="preview">“I’m here with you. Take your time.”</small></div>
-      <div class="companionCard" data-companion="Ace"><h4>Ace</h4><p>Confident, playful, witty</p><small class="preview">“You’ve got my attention — what’s on your mind?”</small></div>
-      <div class="companionCard" data-companion="Sage"><h4>Sage</h4><p>Thoughtful, clear, insightful</p><small class="preview">“Let’s think this through carefully.”</small></div>
-      <div class="companionCard" data-companion="School"><h4>School Mode</h4><p>Polite, age-appropriate, educational</p><small class="preview">“How can I help you learn today?”</small></div>
+      <div class="companionCard" data-companion="Whisp"><h4>Whisp/Sprite</h4><p>Whimsical, supportive</p></div>
+      <div class="companionCard" data-companion="Robot"><h4>Robot</h4><p>Logical, futuristic</p></div>
+      <div class="companionCard" data-companion="Star"><h4>Star</h4><p>Bold, radiant</p></div>
+      <div class="companionCard" data-companion="Cloud"><h4>Cloud</h4><p>Calm, soft</p></div>
     </div>
   </div>
   <button onclick="startChat()">Start Chat</button>
 </div>
 
-<!-- ================= PHASE 1 & 2: CHAT CONTAINER ================= -->
+<!-- Chat Page -->
 <div id="chatContainer" class="hidden">
   <div id="profileSidebar">
-    <div class="profileInfo">
-      <p>👤 <strong id="profileName"></strong></p>
-      <p>🌍 <span id="profileLanguage"></span></p>
-      <p>🧚 <span id="profileCompanion"></span></p>
+    <div id="currentCompanion">
+      <h2 id="companionName"></h2>
+      <p id="companionDesc"></p>
     </div>
     <hr>
-    <p id="starterTitle">Conversation Starters</p>
+    <p>Conversation Starters</p>
     <select id="starterDropdown" onchange="startStarter()">
       <option value="">-- Select Starter --</option>
     </select>
-    <div id="voiceSettings">
-      <h4>Voice Settings</h4>
-      <label><input type="checkbox" id="voiceOutputToggle" checked> Voice replies</label>
-      <label><input type="checkbox" id="voiceInputToggl
+    <button id="gearBtn" onclick="openOptions()">⚙️ Options</button>
+    <div id="optionsPanel" class="hidden">
+      <h4 style="color:var(--accent);">Change Companion</h4>
+      <div class="companionGrid">
+        <div class="companionCard" data-companion="Whisp"><h4>Whisp/Sprite</h4></div>
+        <div class="companionCard" data-companion="Robot"><h4>Robot</h4></div>
+        <div class="companionCard" data-companion="Star"><h4>Star</h4></div>
+        <div class="companionCard" data-companion="Cloud"><h4>Cloud</h4></div>
+      </div>
+    </div>
+  </div>
+  <div id="chatArea">
+    <div id="chat"></div>
+  </div>
+</div>
+
+<footer class="hidden">
+  <input id="userInput" placeholder="Type your message…">
+  <button onclick="sendMessage()">Send</button>
+  <div id="footerLinks">
+    <a href="#" onclick="returnToChat()">Privacy</a>
+    <a href="#" onclick="returnToChat()">Support</a>
+  </div>
+</footer>
+
+<script>
+// ======= Companion Definitions =======
+const companions = {
+  Whisp: {name:"Whisp/Sprite",desc:"Whimsical, supportive"},
+  Robot: {name:"Robot",desc:"Logical, futuristic"},
+  Star: {name:"Star",desc:"Bold, radiant"},
+  Cloud: {name:"Cloud",desc:"Calm, soft"}
+};
+
+// ======= Landing Page =======
+const companionCards = document.querySelectorAll("#landingPage .companionCard");
+const nicknameInput = document.getElementById("nicknameInput");
+let selectedCompanion = "Whisp";
+
+companionCards.forEach(card=>{
+  card.addEventListener("click",()=>{
+    companionCards.forEach(c=>c.classList.remove("active"));
+    card.classList.add("active");
+    selectedCompanion = card.dataset.companion;
+  });
+});
+
+function startChat(){
+  if(!nicknameInput.value.trim()){alert("Enter a nickname"); return;}
+  localStorage.setItem("nickname",nicknameInput.value.trim());
+  localStorage.setItem("companion",selectedCompanion);
+
+  document.getElementById("landingPage").classList.add("hidden");
+  document.getElementById("chatContainer").classList.remove("hidden");
+  document.querySelector("footer").classList.remove("hidden");
+
+  updateCompanionDisplay();
+  populateStarters();
+}
+
+// ======= Chat Companion Display =======
+function updateCompanionDisplay(){
+  const compId = localStorage.getItem("companion") || "Whisp";
+  document.getElementById("companionName").textContent = companions[compId].name;
+  document.getElementById("companionDesc").textContent = companions[compId].desc;
+
+  // options panel
+  const optionsCards = document.querySelectorAll("#optionsPanel .companionCard");
+  optionsCards.forEach(card=>{
+    card.classList.toggle("active", card.dataset.companion === compId);
+    card.onclick=()=>{
+      localStorage.setItem("companion", card.dataset.companion);
+      updateCompanionDisplay();
+    };
+  });
+}
+
+// ======= Options Panel =======
+function openOptions(){
+  const panel = document.getElementById("optionsPanel");
+  panel.classList.toggle("hidden");
+}
+
+// ======= Conversation Starters =======
+const conversationStarters = {
+  "Workplace":["Good morning! How's your day starting?","Hi! Did you catch the latest project update?","Evening! Ready to wrap things up?"],
+  "Dating":["Hi there! Would you like to grab coffee?","Hey! Want to take a walk this afternoon?"],
+  "Travel":["Hi! Where is the nearest train station?"],
+  "School":["Hello! How was class today?","Do you need help with homework?"],
+  "Advanced":["Hello! Did you see the game yesterday?"]
+};
+
+function getDailyStarter(category){
+  const today = new Date().toDateString();
+  const key = `starter_${category}`;
+  let stored = JSON.parse(localStorage.getItem(key)) || {};
+  if(stored.date === today) return stored.phrase;
+  const phrases = conversationStarters[category];
+  const phrase = phrases[Math.floor(Math.random()*phrases.length)];
+  localStorage.setItem(key,JSON.stringify({date:today,phrase}));
+  return phrase;
+}
+
+function populateStarters(){
+  const dd = document.getElementById("starterDropdown");
+  dd.innerHTML = `<option value="">-- Select Starter --</option>`;
+  Object.keys(conversationStarters).forEach(cat=>{
+    const phrase = getDailyStarter(cat);
+    const opt = document.createElement("option");
+    opt.value = phrase;
+    opt.textContent = `${cat}: ${phrase}`;
+    dd.appendChild(opt);
+  });
+}
+
+function startStarter(){
+  const val = document.getElementById("starterDropdown").value;
+  if(val) sendMessage(val);
+}
+
+// ======= Chat Handling =======
+const chat = document.getElementById("chat");
+function addMessage(text,sender){
+  const div=document.createElement("div");
+  div.className=`message ${sender}`;
+  div.textContent=text;
+  chat.appendChild(div);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+function sendMessage(msg=null){
+  const input = document.getElementById("userInput");
+  const text = msg || input.value.trim();
+  if(!text) return;
+  addMessage(text,"user");
+  input.value="";
+  // placeholder AI echo
+  setTimeout(()=>addMessage(`Echo: ${text}`,"bot"),500);
+}
+
+// ======= Footer Links =======
+function returnToChat(){alert("This would normally open Privacy/Support modal and return to chat.");}
+</script>
+</body>
+</html>
